Don spec for AuthApiController@register
